welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:22: error: illegal start of declaration
	if(a >= 20 && a <= 40)
        ^max1020:23: error: illegal start of declaration
	{
        ^max1020:29: error: illegal start of declaration
	return is1020Bool;
        ^