welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {

	if(is1020(a))
	{

		if(in1020(b))
		{
			a = Math.max(a,b);
		}
		
	}
	else
	{
		a = b;
	}
	return a;

}
def is1020(a : Int) = Boolean : {

	var is1020Bool = false;
	if(a >= 20 && a <= 40)
	{

		is1020Bool = true;
		
	}

	return is1020Bool;
	
}

